--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,16 +30,19 @@ jobs:
         python-version: "3.10"
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
     - name: Install dependencies
       run: |
         poetry install --no-root
-    - name: Lint with flake8
-      run: |
-        poetry run task lint
-    - name: Test with pytest
-      run: |
-        poetry run task lint
-
+    - name: Cache build venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+        key: ${{ runner.os }}-venv
+        
   lint:
 
     runs-on: ubuntu-latest
@@ -50,7 +53,6 @@ jobs:
       run:
         working-directory: ./example-app
 
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
@@ -59,13 +61,13 @@ jobs:
         python-version: "3.10"
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
-    - name: Install dependencies
-      run: |
-        poetry install --no-root
+    - name: Load cache
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+        key: ${{ runner.os }}-venv
     - name: Lint with flake8
-      run: |
-        poetry run task lint
-    - name: Test with pytest
       run: |
         poetry run task lint
 
@@ -88,15 +90,15 @@ jobs:
         python-version: "3.10"
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
-    - name: Install dependencies
+    - name: Load cache
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+        key: ${{ runner.os }}-venv  
+    - name: Test with formatter
       run: |
-        poetry install --no-root
-    - name: Lint with flake8
-      run: |
-        poetry run task lint
-    - name: Test with pytest
-      run: |
-        poetry run task lint
+        poetry run task formatter
   
   security:
 
@@ -117,15 +119,15 @@ jobs:
         python-version: "3.10"
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
-    - name: Install dependencies
-      run: |
-        poetry install --no-root
-    - name: Lint with flake8
-      run: |
-        poetry run task lint
+    - name: Load cache
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+        key: ${{ runner.os }}-venv  
     - name: Test with pytest
       run: |
-        poetry run task lint
+        poetry run task security
         
   test:
 
@@ -145,12 +147,12 @@ jobs:
         python-version: "3.10"
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
-    - name: Install dependencies
-      run: |
-        poetry install --no-root
-    - name: Lint with flake8
-      run: |
-        poetry run task lint
+    - name: Load cache
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+        key: ${{ runner.os }}-venv  
     - name: Test with pytest
       run: |
-        poetry run task lint
+        poetry run task test
