--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,8 +14,10 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "windows-latest" ]
+    runs-on: ${{matrix.os}}
     
     defaults:
       run:
@@ -45,7 +47,7 @@ jobs:
         
   lint:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     needs: build
     concurrency:
       group: some-group-name
@@ -73,7 +75,7 @@ jobs:
 
   formatter:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     needs: build
     concurrency:
       group: some-group-name
@@ -102,7 +104,7 @@ jobs:
   
   security:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     needs: build
     concurrency:
       group: some-group-name
@@ -131,7 +133,7 @@ jobs:
         
   test:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     needs: [lint, formatter, security]
     
     defaults:
