--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,7 +48,7 @@ jobs:
         
   lint:
 
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     needs: build
     concurrency:
       group: some-group-name
@@ -76,7 +76,7 @@ jobs:
 
   formatter:
 
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     needs: build
     concurrency:
       group: some-group-name
@@ -105,7 +105,7 @@ jobs:
   
   security:
 
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     needs: build
     concurrency:
       group: some-group-name
@@ -134,7 +134,7 @@ jobs:
         
   test:
 
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     needs: [lint, formatter, security]
     
     defaults:
